1 more file removed

--- a/radio/bootloader/Makefile
+++ b/radio/bootloader/Makefile
@@ -144,47 +144,7 @@ CPPSRC = ../src/targets/taranis/aspi.cpp \
         boot.cpp
 
 # List ASM source files here
-ASRC = startup_stm32f2xx.s
-
-else
-
-
-ifeq ($(PCB), X9D)
-SRC  = system_stm32f2xx.c \
-       stm32f2xx_rcc.c \
-       stm32f2xx_gpio.c \
-       stm32f2xx_spi.c \
-       misc.c \
-       usb/usb_core.c \
-       usb/usb_dcd.c \
-       usb/usb_dcd_int.c \
-       usb/usbd_core.c \
-       usb/usbd_ioreq.c \
-       usb/usbd_req.c \
-       usb/usbd_msc_data.c \
-       usb/usbd_msc_scsi.c \
-       usb/usbd_msc_bot.c \
-       usb/usbd_msc_core.c \
-       usb/usbd_desc.c \
-       usb/usb_bsp.c
-
-CPPSRC = lcdboot.cpp \
-         ff.cpp \
-         aspi.cpp \
-         x9ddiskio.cpp \
-         lcd_driver.cpp \
-       	i2c_ee.cpp \
-         driversboot.cpp \
-         logicioboot.cpp \
-			ff_lfn.cpp \
-         usbd_usr.cpp \
-         usbd_storage_msd.cpp \
-			power.cpp \
-         boot.cpp
-
-
-# List ASM source files here
-ASRC = x9d/startup_stm32f2xx.s
+ASRC = ../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/CMSIS/Device/ST/STM32F2xx/Source/Templates/gcc_ride7/startup_stm32f2xx.s
 
 else
 
@@ -217,7 +177,6 @@ CPPSRC = lcdboot.cpp \
 # List ASM source files here
 ASRC =
 
-endif
 endif
 
 # List all user directories here
