--- a/radio/bootloader/Makefile
+++ b/radio/bootloader/Makefile
@@ -112,6 +112,8 @@ UADEFS =
 
 ifeq ($(PCB), TARANIS)
 SRC  =	system_stm32f2xx.c \
+       	../src/targets/taranis/i2c.c \
+       	../src/targets/taranis/delays.c \
 	../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/STM32F2xx_StdPeriph_Driver/src/stm32f2xx_rcc.c \
 	../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/STM32F2xx_StdPeriph_Driver/src/stm32f2xx_gpio.c \
 	../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/STM32F2xx_StdPeriph_Driver/src/stm32f2xx_spi.c \
@@ -128,17 +130,16 @@ SRC  =	system_stm32f2xx.c \
 	../src/targets/taranis/STM32_USB-Host-Device_Lib_V2.1.0/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_bot.c \
 	../src/targets/taranis/STM32_USB-Host-Device_Lib_V2.1.0/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_core.c \
 	../src/targets/taranis/usbd_desc.c \
+	../src/targets/taranis/aspi.c \
 	../src/targets/taranis/usb_bsp.c
 
-CPPSRC = ../src/targets/taranis/aspi.cpp \
-        lcd_driver.cpp \
+CPPSRC = lcd_driver.cpp \
         driversboot.cpp \
         logicioboot.cpp \
         ff.cpp \
 	x9ddiskio.cpp \
         ../src/targets/taranis/usbd_usr.cpp \
         usbd_storage_msd.cpp \
-       	i2c_ee.cpp \
         lcdboot.cpp \
 	power.cpp \
         boot.cpp
