5 more files removed

--- a/radio/bootloader/Makefile
+++ b/radio/bootloader/Makefile
@@ -123,6 +123,7 @@ SRC  =	system_stm32f2xx.c \
 	../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/STM32F2xx_StdPeriph_Driver/src/stm32f2xx_gpio.c \
 	../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/STM32F2xx_StdPeriph_Driver/src/stm32f2xx_spi.c \
 	../src/targets/taranis/STM32F2xx_StdPeriph_Lib_V1.1.0/Libraries/STM32F2xx_StdPeriph_Driver/src/misc.c \
+        ../src/FatFs/ff.c \
 	../src/FatFs/option/ccsbcs.c \
 	../src/targets/taranis/STM32_USB-Host-Device_Lib_V2.1.0/Libraries/STM32_USB_OTG_Driver/src/usb_core.c \
 	../src/targets/taranis/STM32_USB-Host-Device_Lib_V2.1.0/Libraries/STM32_USB_OTG_Driver/src/usb_dcd.c \
@@ -141,7 +142,6 @@ SRC  =	system_stm32f2xx.c \
 CPPSRC = ../src/targets/taranis/lcd_driver.cpp \
         driversboot.cpp \
         logicioboot.cpp \
-        ff.cpp \
 	../src/targets/taranis/diskio.cpp \
         ../src/targets/taranis/usbd_usr.cpp \
         usbd_storage_msd.cpp \
