Added eSpeak link and information to OpenTX Speaker

--- a/speaker/OpenTXspeak.csproj
+++ b/speaker/OpenTXspeak.csproj
@@ -65,7 +65,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="installvoices.xaml.cs">
+      <DependentUpon>installvoices.xaml</DependentUpon>
+    </Compile>
     <Compile Include="sentencetables.cs" />
+    <Page Include="installvoices.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -105,6 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="eSpeak.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
