More GPL3 stuff

--- a/speaker/OpenTXspeak.csproj
+++ b/speaker/OpenTXspeak.csproj
@@ -119,6 +119,9 @@
   <ItemGroup>
     <Resource Include="speaker_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="GPLv3_Logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
