Add support for Dutch language

--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -259,7 +259,7 @@ ENDIF( )
 INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
 INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
 
-SET( LANGUAGES he pl pt ru de fr it sv cs fi)
+SET( LANGUAGES he pl pt ru de fr it sv cs fi nl)
 FOREACH( language ${LANGUAGES} )
   SET( companion_TS ${companion_TS} translations/companion_${language}.ts )
 ENDFOREACH( language )
