--- a/companion/src/translations.qrc.in
+++ b/companion/src/translations.qrc.in
@@ -10,5 +10,6 @@
         <file>companion_pt.qm</file>
         <file>companion_sv.qm</file>
         <file>companion_ru.qm</file>
+        <file>companion_nl.qm</file>
     </qresource>
 </RCC>
